remove stable checkpoint feature (#2537)
* remove stable checkpoint feature

Signed-off-by: Bob Callaway <bcallaway@google.com>

* remove from compose files

Signed-off-by: Bob Callaway <bcallaway@google.com>

* add redis back for backfill test, change health check count

Signed-off-by: Bob Callaway <bcallaway@google.com>

* remove cmd line arg

Signed-off-by: Bob Callaway <bcallaway@google.com>

* update health checks, set mysql search index

Signed-off-by: Bob Callaway <bcallaway@google.com>

* remove query param from openapi, code gen

Signed-off-by: Bob Callaway <bcallaway@google.com>

* fix lint

Signed-off-by: Bob Callaway <bcallaway@google.com>

* move back to main file

Signed-off-by: Bob Callaway <bcallaway@google.com>

* use ge

Signed-off-by: Bob Callaway <bcallaway@google.com>

* fix crash, move redis back to just backfill dc

Signed-off-by: Bob Callaway <bcallaway@google.com>

* make checks more specific to containers

Signed-off-by: Bob Callaway <bcallaway@google.com>

* make algos test health check more deterministic

Signed-off-by: Bob Callaway <bcallaway@google.com>

* disable redis endpoint for issue 872 test

Signed-off-by: Bob Callaway <bcallaway@google.com>

---------

Signed-off-by: Bob Callaway <bcallaway@google.com>

--- a/docker-compose.backfill-test.yml
+++ b/docker-compose.backfill-test.yml
@@ -41,6 +41,7 @@ services:
       - "2112:2112"
     depends_on:
       - mysql
+      - redis-server
   mysql:
     platform: linux/amd64
     image: gcr.io/trillian-opensource-ci/db_server:v1.4.0
