--- a/.github/workflows/validate-release.yml
+++ b/.github/workflows/validate-release.yml
@@ -47,6 +47,9 @@ jobs:
       - check-signature
     container:
       image: ghcr.io/gythialy/golang-cross:v1.25.4-0@sha256:45ac2d3098413342370c62bd272cfa647c5c0813978719da5b5e31b2ddbf4897
+      volumes:
+        - /usr:/host_usr
+        - /opt:/host_opt
 
     steps:
       - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
@@ -63,6 +66,25 @@ jobs:
       # - https://github.com/actions/checkout/issues/1048
       # - https://github.com/actions/runner-images/issues/6775
       - run: git config --system --add safe.directory /__w/rekor/rekor
+
+      # note this runs from within the golang-cross container, so if we want to free up space
+      # on the host, we have to reach through the bind mounts to clean up unused content on the runners
+      - name: free up disk space for the release
+        run: |
+          rm -rf /host_usr/share/dotnet || true
+          rm -rf /host_usr/share/swift || true
+          rm -rf /host_usr/local/lib/android || true
+          rm -rf /host_usr/local/.ghcup || true
+          rm -rf /host_usr/local/graalvm/ || true
+          rm -rf /host_usr/local/share/powershell || true
+          rm -rf /host_usr/local/share/chromium || true
+          rm -rf /host_usr/local/lib/node_modules || true
+          rm -rf /host_usr/lib/google-cloud-sdk || true
+          rm -rf /host_usr/local/share/boost || true
+          rm -rf /host_opt/hostedtoolcache/ || true
+          rm -rf /host_opt/ghc || true
+      - name: check disk space
+        run: df -h
 
       - name: goreleaser snapshot
         run: make snapshot
